--- a/Pages/SettingsPage.xaml
+++ b/Pages/SettingsPage.xaml
@@ -16,6 +16,16 @@
                        FontWeight="SemiBold" 
                        HorizontalAlignment="Center"
                        Margin="0,20,0,10"/>
+            
+            <!-- Progress Indicator for Dependency Installation -->
+            <Grid Visibility="Collapsed" x:Name="ProgressContainer" Margin="0,10,0,10">
+                <StackPanel HorizontalAlignment="Center" Spacing="12">
+                    <ProgressRing x:Name="ProgressRing" IsActive="False" Width="50" Height="50" 
+                                 HorizontalAlignment="Center"/>
+                    <TextBlock x:Name="StatusText" HorizontalAlignment="Center" 
+                              Style="{StaticResource BodyTextBlockStyle}" Text=""/>
+                </StackPanel>
+            </Grid>
 
             <!-- Proxy Settings -->
             <StackPanel Style="{StaticResource SettingsGroupStyle}" Spacing="16" HorizontalAlignment="Stretch">
